--- a/chatBot/chatBot/Views/Home/Index.cshtml
+++ b/chatBot/chatBot/Views/Home/Index.cshtml
@@ -6,410 +6,276 @@
 
 <html>
 
+<html class="" lang="en">
 <head>
-    <style>
-    @@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-    @@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
-    html,
-    body {
-      background: #e5e5e5;
-      font-family: 'Lato', sans-serif;
-      margin: 0px auto;
-    }
 
-    ::selection {
-      background: rgba(82, 179, 217, 0.3);
-      color: inherit;
-    }
+    <style class="cp-pen-styles">
+        @@charset "utf-8";
+        /* CSS Document */
 
-    a {
-      color: rgba(82, 179, 217, 0.9);
-    }
-    /* M E N U */
+        /* ---------- GENERAL ---------- */
 
-    .menu {
-      position: fixed;
-      top: 0px;
-      left: 0px;
-      right: 0px;
-      width: 100%;
-      height: 50px;
-      background: rgba(82, 179, 217, 0.9);
-      z-index: 100;
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-    }
+        body {
+            background: #e9e9e9;
+            color: #9a9a9a;
+            font: 100%/1.5em "Droid Sans", sans-serif;
+            margin: 0;
+        }
 
-    .back {
-      position: absolute;
-      width: 90px;
-      height: 50px;
-      top: 0px;
-      left: 0px;
-      color: #fff;
-      line-height: 50px;
-      font-size: 30px;
-      padding-left: 10px;
-      cursor: pointer;
-    }
+        a {
+            text-decoration: none;
+        }
 
-    .back img {
-      position: absolute;
-      top: 5px;
-      left: 30px;
-      width: 40px;
-      height: 40px;
-      background-color: rgba(255, 255, 255, 0.98);
-      border-radius: 100%;
-      -webkit-border-radius: 100%;
-      -moz-border-radius: 100%;
-      -ms-border-radius: 100%;
-      margin-left: 15px;
-    }
+        fieldset {
+            border: 0;
+            margin: 0;
+            padding: 0;
+        }
 
-    .back:active {
-      background: rgba(255, 255, 255, 0.2);
-    }
+        h4, h5 {
+            line-height: 1.5em;
+            margin: 0;
+        }
 
-    .name {
-      position: absolute;
-      top: 3px;
-      left: 110px;
-      font-family: 'Lato';
-      font-size: 25px;
-      font-weight: 300;
-      color: rgba(255, 255, 255, 0.98);
-      cursor: default;
-    }
+        hr {
+            background: #e9e9e9;
+            border: 0;
+            -moz-box-sizing: content-box;
+            box-sizing: content-box;
+            height: 1px;
+            margin: 0;
+            min-height: 1px;
+        }
 
-    .last {
-      position: absolute;
-      top: 30px;
-      left: 115px;
-      font-family: 'Lato';
-      font-size: 11px;
-      font-weight: 400;
-      color: rgba(255, 255, 255, 0.6);
-      cursor: default;
-    }
-    /* M E S S A G E S */
+        img {
+            border: 0;
+            display: block;
+            height: auto;
+            max-width: 100%;
+        }
 
-    .chat {
-      list-style: none;
-      background: none;
-      margin: 0;
-      padding: 0 0 50px 0;
-      margin-top: 60px;
-      margin-bottom: 10px;
-    }
+        input {
+            border: 0;
+            color: inherit;
+            font-family: inherit;
+            font-size: 100%;
+            line-height: normal;
+            margin: 0;
+        }
 
-    .chat li {
-      padding: 0.5rem;
-      overflow: hidden;
-      display: flex;
-    }
+        p {
+            margin: 0;
+        }
 
-    .chat .avatar {
-      width: 40px;
-      height: 40px;
-      position: relative;
-      display: block;
-      z-index: 2;
-      border-radius: 100%;
-      -webkit-border-radius: 100%;
-      -moz-border-radius: 100%;
-      -ms-border-radius: 100%;
-      background-color: rgba(255, 255, 255, 0.9);
-    }
+        .clearfix {
+            *zoom: 1;
+        }
+            /* For IE 6/7 */
+            .clearfix:before, .clearfix:after {
+                content: "";
+                display: table;
+            }
 
-    .chat .avatar img {
-      width: 40px;
-      height: 40px;
-      border-radius: 100%;
-      -webkit-border-radius: 100%;
-      -moz-border-radius: 100%;
-      -ms-border-radius: 100%;
-      background-color: rgba(255, 255, 255, 0.9);
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-    }
+            .clearfix:after {
+                clear: both;
+            }
 
-    .chat .day {
-      position: relative;
-      display: block;
-      text-align: center;
-      color: #c0c0c0;
-      height: 20px;
-      text-shadow: 7px 0px 0px #e5e5e5, 6px 0px 0px #e5e5e5, 5px 0px 0px #e5e5e5, 4px 0px 0px #e5e5e5, 3px 0px 0px #e5e5e5, 2px 0px 0px #e5e5e5, 1px 0px 0px #e5e5e5, 1px 0px 0px #e5e5e5, 0px 0px 0px #e5e5e5, -1px 0px 0px #e5e5e5, -2px 0px 0px #e5e5e5, -3px 0px 0px #e5e5e5, -4px 0px 0px #e5e5e5, -5px 0px 0px #e5e5e5, -6px 0px 0px #e5e5e5, -7px 0px 0px #e5e5e5;
-      box-shadow: inset 20px 0px 0px #e5e5e5, inset -20px 0px 0px #e5e5e5, inset 0px -2px 0px #d7d7d7;
-      line-height: 38px;
-      margin-top: 5px;
-      margin-bottom: 20px;
-      cursor: default;
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-    }
+        /* ---------- LIVE-CHAT ---------- */
 
-    .other .msg {
-      order: 1;
-      border-top-left-radius: 0px;
-      box-shadow: -1px 2px 0px #D4D4D4;
-    }
+        #live-chat {
+            bottom: 0;
+            font-size: 12px;
+            right: 24px;
+            position: fixed;
+            width: 300px;
+        }
 
-    .other:before {
-      content: "";
-      position: relative;
-      top: 0px;
-      right: 0px;
-      left: 40px;
-      width: 0px;
-      height: 0px;
-      border: 5px solid #fff;
-      border-left-color: transparent;
-      border-bottom-color: transparent;
-    }
+            #live-chat header {
+                background: #293239;
+                border-radius: 5px 5px 0 0;
+                color: #fff;
+                cursor: pointer;
+                padding: 16px 24px;
+            }
 
-    .self {
-      justify-content: flex-end;
-      align-items: flex-end;
-    }
+            #live-chat h4:before {
+                background: #1a8a34;
+                border-radius: 50%;
+                content: "";
+                display: inline-block;
+                height: 8px;
+                margin: 0 8px 0 0;
+                width: 8px;
+            }
 
-    .self .msg {
-      order: 1;
-      border-bottom-right-radius: 0px;
-      box-shadow: 1px 2px 0px #D4D4D4;
-    }
+            #live-chat h4 {
+                font-size: 12px;
+            }
 
-    .self .avatar {
-      order: 2;
-    }
+            #live-chat h5 {
+                font-size: 10px;
+            }
 
-    .self .avatar:after {
-      content: "";
-      position: relative;
-      display: inline-block;
-      bottom: 19px;
-      right: 0px;
-      width: 0px;
-      height: 0px;
-      border: 5px solid #fff;
-      border-right-color: transparent;
-      border-top-color: transparent;
-      box-shadow: 0px 2px 0px #D4D4D4;
-    }
+            #live-chat form {
+                padding: 24px;
+            }
 
-    .msg {
-      background: white;
-      min-width: 50px;
-      padding: 10px;
-      border-radius: 2px;
-      box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
-    }
+            #live-chat input[type="text"] {
+                border: 1px solid #ccc;
+                border-radius: 3px;
+                padding: 8px;
+                outline: none;
+                width: 234px;
+            }
 
-    .msg p {
-      font-size: 0.8rem;
-      margin: 0 0 0.2rem 0;
-      color: #777;
-    }
+        .chat-message-counter {
+            background: #e62727;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            display: none;
+            font-size: 12px;
+            font-weight: bold;
+            height: 28px;
+            left: 0;
+            line-height: 28px;
+            margin: -15px 0 0 -15px;
+            position: absolute;
+            text-align: center;
+            top: 0;
+            width: 28px;
+        }
 
-    .msg img {
-      position: relative;
-      display: block;
-      width: 450px;
-      border-radius: 5px;
-      box-shadow: 0px 0px 3px #eee;
-      transition: all .4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
-      cursor: default;
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-    }
+        .chat-close {
+            background: #1b2126;
+            border-radius: 50%;
+            color: #fff;
+            display: block;
+            float: right;
+            font-size: 10px;
+            height: 16px;
+            line-height: 16px;
+            margin: 2px 0 0 0;
+            text-align: center;
+            width: 16px;
+        }
 
-    @@media screen and (max-width: 800px) {
-      .msg img {
-        width: 300px;
-      }
-    }
+        .chat {
+            background: #fff;
+        }
 
-    @@media screen and (max-width: 550px) {
-      .msg img {
-        width: 200px;
-      }
-    }
+        .chat-history {
+            height: 252px;
+            padding: 8px 24px;
+            overflow-y: scroll;
+        }
 
-    .msg time {
-      font-size: 0.7rem;
-      color: #ccc;
-      margin-top: 3px;
-      float: right;
-      cursor: default;
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-    }
+        .chat-message {
+            margin: 16px 0;
+        }
 
-    emoji {
-      display: inline-block;
-      height: 18px;
-      width: 18px;
-      background-size: cover;
-      background-repeat: no-repeat;
-      margin-top: -7px;
-      margin-right: 2px;
-      transform: translate3d(0px, 3px, 0px);
-    }
+            .chat-message img {
+                border-radius: 50%;
+                float: left;
+            }
 
-    emoji.please {
-      background-image: url(http://imgur.com/ftowh0s.png);
-    }
+        .chat-message-content {
+            margin-left: 56px;
+        }
 
-    emoji.lmao {
-      background-image: url(http://i.imgur.com/MllSy5N.png);
-    }
+        .chat-time {
+            float: right;
+            font-size: 10px;
+        }
 
-    emoji.happy {
-      background-image: url(http://imgur.com/5WUpcPZ.png);
-    }
-
-    emoji.pizza {
-      background-image: url(http://imgur.com/voEvJld.png);
-    }
-
-    emoji.cryalot {
-      background-image: url(http://i.imgur.com/UUrRRo6.png);
-    }
-
-    emoji.books {
-      background-image: url(http://i.imgur.com/UjZLf1R.png);
-    }
-
-    emoji.moai {
-      background-image: url(http://imgur.com/uSpaYy8.png);
-    }
-
-    emoji.suffocated {
-      background-image: url(http://i.imgur.com/jfTyB5F.png);
-    }
-
-    emoji.scream {
-      background-image: url(http://i.imgur.com/tOLNJgg.png);
-    }
-
-    emoji.hearth_blue {
-      background-image: url(http://i.imgur.com/gR9juts.png);
-    }
-
-    emoji.funny {
-      background-image: url(http://i.imgur.com/qKia58V.png);
-    }
-
-    @@-webikt-keyframes pulse {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 0.5;
-      }
-    }
-
-    ::-webkit-scrollbar {
-      min-width: 12px;
-      width: 12px;
-      max-width: 12px;
-      min-height: 12px;
-      height: 12px;
-      max-height: 12px;
-      background: #e5e5e5;
-      box-shadow: inset 0px 50px 0px rgba(82, 179, 217, 0.9), inset 0px -52px 0px #fafafa;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #bbb;
-      border: none;
-      border-radius: 100px;
-      border: solid 3px #e5e5e5;
-      box-shadow: inset 0px 0px 3px #999;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #b0b0b0;
-      box-shadow: inset 0px 0px 3px #888;
-    }
-
-    ::-webkit-scrollbar-thumb:active {
-      background: #aaa;
-      box-shadow: inset 0px 0px 3px #7f7f7f;
-    }
-
-    ::-webkit-scrollbar-button {
-      display: block;
-      height: 26px;
-    }
-    /* T Y P E */
-
-    input.textarea {
-      position: fixed;
-      bottom: 0px;
-      left: 0px;
-      right: 0px;
-      width: 100%;
-      height: 50px;
-      z-index: 99;
-      background: #fafafa;
-      border: none;
-      outline: none;
-      padding-left: 10px;
-      padding-right: 55px;
-      color: #666;
-      font-weight: 400;
-    }
-
-    .emojis {
-      position: fixed;
-      display: block;
-      bottom: 8px;
-      left: 7px;
-      width: 34px;
-      height: 34px;
-      background-image: url(http://i.imgur.com/5WUpcPZ.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      z-index: 100;
-      cursor: pointer;
-    }
-
-    .emojis:active {
-      opacity: 0.9;
-    }
+        .chat-feedback {
+            font-style: italic;
+            margin: 0 0 0 80px;
+        }
     </style>
 </head>
-
 <body>
-    <div class="menu">
-    </div>
-    <ol class="chat">
-        @{ 
-            var j = 0;
-        }
-        @foreach (var mess in ViewBag.Messages)
-        {
-        <li class="@(j++%2==0?"self":"other")">
-            <div class="msg">
-                <p>@(((MemoryOfChat)mess).message)</p>
-                <time>@(((MemoryOfChat)mess).date)</time>
-            </div>
-        </li>
-        }
-       <form action="/Home/Send" method="get">
-           <input class="textarea" type="text" placeholder="Type here!" name="text"/>
-       </form>
+    <meta charset="UTF-8">
+    <title>Live Chat</title>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/VALERA")
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+
+    <div id="live-chat">
+
+        <header class="clearfix">
+
+            <a href="#" class="chat-close">x</a>
+
+            <img src="http://gravatar.com/avatar/2c0ad52fc5943b78d6abe069cc08f320?s=32" alt="" width="32"
+                 height="32"> <h4>John Doe, your stupid bot</h4>
+
+        </header>
+
+        <div class="chat" style="display: none;">
+
+            <div class="chat-history">
+
+                <div class="chat-message clearfix">
+
+
+                    @{
+                        var j = 0;
+                    }
+                    @foreach (var mess in ViewBag.Messages)
+                    {
+                        <li class="@(j++%2==0?"self":"other")">
+                            <div class="chat-message-content clearfix">
+                                <p>@(((MemoryOfChat)mess).message)</p>
+                                <time>@(((MemoryOfChat)mess).date)</time>
+
+                               
+
+                            </div> <!-- end chat-message-content -->
+                        </li>  }
+                </div> <!-- end chat-message -->
+
+
+
+            </div> <!-- end chat-history -->
+            <form action="/Home/Send" method="post">
+
+                <fieldset>
+
+                    <input type="text" placeholder="Type your message…">
+                    <input type="hidden">
+
+                </fieldset>
+
+            </form>
+
+        </div> <!-- end chat -->
+
+    </div> <!-- end live-chat -->
+
+    <script src="minimize.js"></script>
+    <script src="StopExecutionOnTimeOut.js"></script>
+    <script>
+(function() {
+
+	$('#live-chat header').on('click', function() {
+
+		$('.chat').slideToggle(300, 'swing');
+		$('.chat-message-counter').fadeToggle(300, 'swing');
+
+	});
+
+	$('.chat-close').on('click', function(e) {
+
+		e.preventDefault();
+		$('#live-chat').fadeOut(300);
+
+	});
+
+}) ();
+    </script>
+    <script aria-hidden="true" type="application/x-lastpass" id="hiddenlpsubmitdiv" style="display: none;">
+    </script>
+    <script>try{(function() { for(var lastpass_iter=0; lastpass_iter < document.forms.length; lastpass_iter++){ var lastpass_f = document.forms[lastpass_iter]; if(typeof(lastpass_f.lpsubmitorig2)=="undefined"){ lastpass_f.lpsubmitorig2 = lastpass_f.submit; if (typeof(lastpass_f.lpsubmitorig2)=='object'){ continue;}lastpass_f.submit = function(){ var form=this; var customEvent = document.createEvent("Event"); customEvent.initEvent("lpCustomEvent", true, true); var d = document.getElementById("hiddenlpsubmitdiv"); if (d) {for(var i = 0; i < document.forms.length; i++){ if(document.forms[i]==form){ if (typeof(d.innerText) != 'undefined') { d.innerText=i.toString(); } else { d.textContent=i.toString(); } } } d.dispatchEvent(customEvent); }form.lpsubmitorig2(); } } }})()}catch(e){}</script>
+
 </body>
-<html>
+</html>
